# claude-memory-mcp

./: .gitignore  ARCHITECTURE_CLARIFICATION.md  CLAUDE.md  Dockerfile.memory-mcp  FIXES_IMPLEMENTED.md  IMPROVED_PROFILE_PROMPT.md  IMPROVEMENTS_SUMMARY.md  MCP_PROTOCOL_FIX_SUCCESS.md  MEMORY_ENHANCEMENTS_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  README-QDRANT.md  README.md  SETUP_GUIDE.md  STARTUP_OPTIMIZATION.md  add_simple_memories.py  cleanup_project.sh  config.qdrant.json  config_migration_enabled.json  debug_embedding_model.py  debug_startup_timing.py  demo_phase2_migration.py  deploy.sh  docker-compose.production.yml  docker-compose.qdrant.yml  migrate_to_qdrant.py  minimal_mcp_test.py  populate_test_memories.py  pyproject.toml  requirements-qdrant.txt  requirements.txt  start_memory_server.sh  start_qdrant_dev.sh  stress_test_qdrant.py  test_basic_memory.py  test_complete_fixes.py  test_mcp_direct.py  test_mcp_protocol.py  test_mcp_simple.py  test_mcp_startup.py  test_phase2_integration.py  (+4 more)
.github/workflows/: ci-cd.yml
docs/status/: DEBUGGING_STATUS.md  DEPLOYMENT_SUCCESS.md  IMPLEMENTATION_COMPLETE.md
helm/memory-mcp/: Chart.yaml  values.yaml
k8s/: memory-mcp-deployment.yaml
memory_mcp/: __main__.py
memory_mcp/auto_memory/: __init__.py  conversation_analyzer.py  enhanced_capture.py
memory_mcp/domains/: episodic.py  manager_enhanced.py  persistence.py  persistence_qdrant.py  semantic.py
memory_mcp/mcp/: server.py  (+3 more)
tests/: test_auto_capture.py  test_memory_mcp.py  test_memory_stats.py  test_memory_stats_fix.py  test_minimal_enhanced.py
(+10 files in other folders)
